; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_sh2core.c_SH2PowerOn.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_sh2core.c_SH2PowerOn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32*, i32, i32)*, i32 (i32*, i32)*, i64 (i32*)* }

@SH2Core = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SH2PowerOn(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SH2Core, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 2
  %6 = load i64 (i32*)*, i64 (i32*)** %5, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i64 %6(i32* %7)
  store i64 %8, i64* %3, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SH2Core, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i32 (i32*, i32)*, i32 (i32*, i32)** %10, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = load i64, i64* %3, align 8
  %14 = call i32 @MappedMemoryReadLong(i64 %13)
  %15 = call i32 %11(i32* %12, i32 %14)
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SH2Core, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32 (i32*, i32, i32)*, i32 (i32*, i32, i32)** %17, align 8
  %19 = load i32*, i32** %2, align 8
  %20 = load i64, i64* %3, align 8
  %21 = add nsw i64 %20, 4
  %22 = call i32 @MappedMemoryReadLong(i64 %21)
  %23 = call i32 %18(i32* %19, i32 15, i32 %22)
  ret void
}

declare dso_local i32 @MappedMemoryReadLong(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
